feat(workout): nested repeat tree in parsed structure and .fit export
The parser now builds a recursive node tree: repeat groups contain steps and
other groups — 2 × (8 × 30″ … récup …) ; R = 3′ becomes repeat(2, [repeat(8,
[work 30″ VMA, récup]), 3′]), with between-series recoveries folded into
their loop. New patterns: N×30/30 alternations, strides as repeat groups,
work/récup splitting inside intervals. The FIT encoder walks the tree and
emits native (nested) repeat structures; recovery steps get REST intensity.